add form input tags

--- a/client/templates/madLib/index.html
+++ b/client/templates/madLib/index.html
@@ -1,5 +1,48 @@
-<template>
-	<div class="col-xs-12">	
+<body>
+	<div class="row top-margin">
+		<div class="col-xs-12">	
+			<p  class="centered" id="mad_lib"> Create your Mad Lib!</p>
+		</div>	
+	</div>
 
-	</div>	
-</template>	
+	<div class="row">
+		<div class="col-xs-12 ">
+			<div class="form-horizontal top-margin">
+				<div class="form-group">
+					<label class="col-xs-2" for="exclamation">Exclamation:</label>
+					<div class="col-xs-6">
+  						<input type="text" class="form-control" id="exclamation">
+  					</div>
+				</div>
+
+				<div class="form-group">
+  					<label class="col-xs-2" for="adverb">Adverb:</label>
+  					<div class="col-xs-6">
+  						<input type="text" class="form-control" id="adverb">
+  					</div>
+				</div>
+
+				<div class="form-group">
+  					<label class="col-xs-2" for="noun">Noun:</label>
+  					<div class="col-xs-6">
+  						<input type="text" class="form-control" id="noun">
+  					</div>
+				</div>
+
+				<div class="form-group">
+  					<label  class="col-xs-2" for="verb">Verb:</label>
+  					<div class="col-xs-6" >
+  						<input type="text" class="form-control" id="verb">
+  					</div>
+				</div>
+
+				<div class="form-group">
+					<div class="col-sm-offset-2 col-sm-10" >		
+						<button id="submitBtn" type="submit" class="btn btn-default">Submit</button>
+					</div>
+				</div>	
+
+			</div>	
+		</div>	
+	</div>		
+</body>	
