align to the right

--- a/client/templates/madLib/index.html
+++ b/client/templates/madLib/index.html
@@ -6,32 +6,32 @@
 	</div>
 
 	<div class="row">
-		<div class="col-xs-12 ">
+		<div class="col-xs-12">
 			<div class="form-horizontal top-margin">
 				<div class="form-group">
-					<label class="col-xs-2" for="exclamation">Exclamation:</label>
-					<div class="col-xs-6">
+					<label class="col-xs-2 control-label" for="exclamation">Exclamation:</label>
+					<div class="col-xs-10">
   						<input type="text" class="form-control" id="exclamation">
   					</div>
 				</div>
 
 				<div class="form-group">
-  					<label class="col-xs-2" for="adverb">Adverb:</label>
-  					<div class="col-xs-6">
+  					<label class="col-xs-2 control-label" for="adverb">Adverb:</label>
+  					<div class="col-xs-10">
   						<input type="text" class="form-control" id="adverb">
   					</div>
 				</div>
 
 				<div class="form-group">
-  					<label class="col-xs-2" for="noun">Noun:</label>
-  					<div class="col-xs-6">
+  					<label class="col-xs-2 control-label" for="noun">Noun:</label>
+  					<div class="col-xs-10">
   						<input type="text" class="form-control" id="noun">
   					</div>
 				</div>
 
 				<div class="form-group">
-  					<label  class="col-xs-2" for="verb">Verb:</label>
-  					<div class="col-xs-6" >
+  					<label  class="col-xs-2 control-label" for="verb">Verb:</label>
+  					<div class="col-xs-10" >
   						<input type="text" class="form-control" id="verb">
   					</div>
 				</div>
